<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_connection_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="359dp"
        android:layout_height="467dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_connection_name"
                android:textSize="16sp" />

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="211dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playerNameInputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/activity_connection_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_connection_protocol"
                android:textSize="16sp" />

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="211dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/protocolInputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/activity_connection_protocol" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_connection_server_ip"
                android:textSize="16sp" />

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="211dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serverIPInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_connection_server_ip" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_connection_port"
                android:textSize="16sp" />

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="211dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/portInputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/activity_connection_port" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnConnectionConnect"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue_navy"
        android:text="@string/activity_connection_btn_connect"
        android:textColorLink="#A41313"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btnConnectionProxmox"
        android:layout_width="115dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/activity_connection_btn_server_proxmox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnectionConnect"
        app:layout_constraintVertical_bias="0.741" />

    <Button
        android:id="@+id/btnConnectionLocal"
        android:layout_width="115dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/activity_connection_btn_server_local"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConnectionConnect"
        app:layout_constraintVertical_bias="0.741" />

</androidx.constraintlayout.widget.ConstraintLayout>